# ch-storage-server

./: .gitignore  .travis.yml  BUILD  Dockerfile  Makefile.tf  README.md  azure-pipelines.yml  configure.ac
config/: ch-firebase-targets.json  ch-manual-classify.json  ch-storage-server.json
config/tf_files/: retrained_labels.txt
manual-classify/: Makefile.am  image-saver.cpp  image-saver.hpp  main.cpp  mc-config.cpp  mc-config.hpp
src/: Makefile.am  config.cpp  config.hpp  curl-smtp.cpp  curl-smtp.hpp  ffcv.cpp  firebase-client.cpp  firebase-client.hpp  kafka-client.cpp  kafka-client.hpp  label-image.cpp  label-image.hpp  mail-client.cpp  mail-client.hpp  main.cpp  motion-detector.cpp  motion-detector.hpp  standalone.cpp  storage-server.cpp  storage-server.hpp
